--- a/about.html
+++ b/about.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>East Africa Conference</title>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-      rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
-    >
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
-      integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.typekit.net/kpf7nnc.css">
-    <link rel="stylesheet" href="about.css">
+    />
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+      integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="https://use.typekit.net/kpf7nnc.css" />
+    <link rel="stylesheet" href="about.css" />
   </head>
   <body>
     <header class="fixed-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark top-nav">
         <div class="container-fluid">
           <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="ms-auto"></div>-
+            <div class="ms-auto"></div>
+            -
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
-              <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-twitter"></i></a></li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
+              </li>
               <li class="nav-item"><a class="nav-link" href="#">English</a></li>
               <li class="nav-item"><a class="nav-link" href="#">My page</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Logout</a></li>
@@ -32,22 +47,41 @@
           </div>
         </div>
       </nav>
-  
+
       <nav class="navbar navbar-expand-lg navbar-light bg-white btm-nav">
         <div class="container-fluid" id="mobile-view">
-          <a class="navbar-brand" href="#"><img id="logo" src="./images/logo.png" alt=""></a>
+          <a class="navbar-brand" href="index.html"
+            ><img id="logo" src="./images/logo.png" alt=""
+          /></a>
 
-          <button class="navbar-toggler" type="button" aria-controls="navbarNav" id="burger">
-              <span class="navbar-toggler-icon"></span>
+          <button
+            class="navbar-toggler"
+            type="button"
+            aria-controls="navbarNav"
+            id="burger"
+          >
+            <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <div class="ms-auto"></div>
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link active" href="program">Program</a></li>
-              <li class="nav-item"><a class="nav-link active" href="speakers">Developers</a></li>
-              <li class="nav-item"><a class="nav-link active" href="partners">Sponsors</a></li>
-              <li class="nav-item border border-3 border-danger"><a class="nav-link" href="#">CB Campain</a></li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disable" href="#program">past Summit</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disable" href="#speakers">Developers</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disable" href="#partners">Sponsors</a>
+              </li>
+              <li class="nav-item border border-3 border-danger">
+                <a class="nav-link" href="#">CB Campain</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -55,17 +89,29 @@
 
       <!----------popup------------------>
 
-   <div class="mobileMenu">
-      <div class="faIcon"><i class="fas fa-times fa-2x" id="hideMenu"></i><br/></div>
-      <ul>
-        <li class="nav-item"><a class="linker nav-link active" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="linker nav-link active" href="#program">Program</a></li>
-        <li class="nav-item"><a class="linker nav-link active" href="#speakers">Developers</a></li>
-        <li class="nav-item"><a class="linker nav-link active" href="#partners">Sponsor</a></li>
-        <li class="nav-item"><a class="linker nav-link active" href="">CN Campaign</a></li>
-      </ul>
-    </div>
-        
+      <div class="mobileMenu">
+        <div class="faIcon">
+          <i class="fas fa-times fa-2x" id="hideMenu"></i><br />
+        </div>
+        <ul>
+          <li class="nav-item">
+            <a class="linker nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="linker nav-link disable" href="#pastsummit">Past-summit</a>
+          </li>
+          <li class="nav-item">
+            <a class="linker nav-link disable" href="#speakers">Developers</a>
+          </li>
+          <li class="nav-item">
+            <a class="linker nav-link disable" href="partners">Sponsor</a>
+          </li>
+          <li class="nav-item">
+            <a class="linker nav-link active" href="">CN Campaign</a>
+          </li>
+        </ul>
+      </div>
+
       <!------End popup------------------>
     </header>
     <main>
@@ -74,14 +120,21 @@
           <div class="row">
             <div class="col-1"></div>
             <div class="col-10 mt-5 mb-2 pt-5">
-              <h2 class="mb-5">The east african software<br>developers' Community Annual symposium<br>2022</h2>
+              <h2 class="mb-5">
+                The east african software<br />developers' Community Annual
+                symposium<br />2022
+              </h2>
               <p id="intro">
-                This  annual symposium brings together the community of experts,academics and activists who comprise the East african software developers
-                community, affiliate network in different countries every year.This year we we hope to expand our invitation list including
-                organisations and individuals.
+                This annual symposium brings together the community of
+                experts,academics and activists who comprise the East african
+                software developers community, affiliate network in different
+                countries every year.This year we we hope to expand our
+                invitation list including organisations and individuals.
               </p>
               <p id="contact">
-                Please contact us by E-mail for any further questions about The east african software. developers' Community Annual symposium 2022<br>
+                Please contact us by E-mail for any further questions about The
+                east african software. developers' Community Annual symposium
+                2022<br />
                 <a href="">easdc@community.org</a>
               </p>
             </div>
@@ -94,72 +147,89 @@
       <section class="program" id="program">
         <div class="row program-title container-fluid mx-auto">
           <div class="col"></div>
-          <div class="col-10 mt-2 pt-2"><h2>The east african software' developers' Community Annual symposium 2022 Logo</h2></div>
+          <div class="col-10 mt-2 pt-2">
+            <h2>
+              The east african software' developers' Community Annual symposium
+              2022 Logo
+            </h2>
+          </div>
           <div class="col"></div>
         </div>
         <div class="row program-title container mx-auto">
           <div class="col"></div>
-          <div class="col-4"><hr id="line"></div>
+          <div class="col-4"><hr id="line" /></div>
           <div class="col"></div>
         </div>
         <div class="row program-title container-fluid mx-auto">
           <div class="col"></div>
           <div class="col-8 mt-3 pt-3">
             <p>
-              The logo of the east african software' developers' Community' symposium 2023 was decided
-              through the Logo competition from 8,June 2020 to 7,July 2020
+              The logo of the east african software' developers' Community'
+              symposium 2023 was decided through the Logo competition from
+              8,June 2020 to 7,July 2020
             </p>
           </div>
           <div class="col"></div>
         </div>
 
         <div class="row container justify-content-between mt-3 cards mx-auto">
-          <div class=" col card d-none"></div>
-          <div class=" col card border-0">
-            <img src="./images/logo.png" class="card-img-top" alt="...">
+          <div class="col card d-none"></div>
+          <div class="col card border-0">
+            <img src="./images/logo.png" class="card-img-top" alt="..." />
             <div class="card-body">
               <p class="card-title">8th June - 7th July 2020</p>
             </div>
           </div>
-          <div class=" col card d-none"></div>
+          <div class="col card d-none"></div>
         </div>
 
         <section>
           <div class="row container justify-content-between mt-3 cards mx-auto">
-          <div class=" col card d-none"></div>
-          <div class=" col card border-0 text-center">
-            <h2>See the past E.A Summits</h2>
+            <div class="col card d-none"></div>
+            <div class="col card border-0 text-center" id="pastsummit">
+              <h2>See the past E.A Summits</h2>
+            </div>
+            <div class="col card d-none"></div>
           </div>
-          <div class=" col card d-none"></div>
-        </div>
-        <div class="row program-title container mx-auto">
-          <div class="col"></div>
-          <div class="col-4"><hr id="line"></div>
-          <div class="col"></div>
-        </div>
-        <div class="row container justify-content-between mt-3 mb-5 cards mx-auto">
-          <div class=" col card d-none"></div>
-          <div class=" col card border-0 mb-2">
-            <img src="./images/summit1.jfif" class="card-img-top prev" alt="...">
-            <h5 class="card-title">2017<br>The Rwanda symposium</h5>
-            <div class="card-body"></div>
+          <div class="row program-title container mx-auto">
+            <div class="col"></div>
+            <div class="col-4"><hr id="line" /></div>
+            <div class="col"></div>
           </div>
-          <div class=" col card border-0 mb-2">
-            <img src="./images/summit2.jfif" class="card-img-top prev" alt="...">
-            <h5 class="card-title">2014<br>The Nairobi symposium</h5>
-            <div class="card-body"></div>
+          <div
+            class="row container justify-content-between mt-3 mb-5 cards mx-auto"
+          >
+            <div class="col card d-none"></div>
+            <div class="col card border-0 mb-2">
+              <img
+                src="./images/summit1.jfif"
+                class="card-img-top prev"
+                alt="..."
+              />
+              <h5 class="card-title">2017<br />The Rwanda symposium</h5>
+              <div class="card-body"></div>
+            </div>
+            <div class="col card border-0 mb-2">
+              <img
+                src="./images/summit2.jfif"
+                class="card-img-top prev"
+                alt="..."
+              />
+              <h5 class="card-title">2014<br />The Nairobi symposium</h5>
+              <div class="card-body"></div>
+            </div>
+            <div class="col card d-none"></div>
           </div>
-          <div class=" col card d-none"></div>
-        </div>
         </section>
       </section>
       <footer class="container-fluid mx-auto">
         <div class="footer-logo container-fluid p-2 mx-auto lead text-dark">
-          <a href="index.html"> <img src="images/logo.png" alt="Standard-oil"></a> 
+          <a href="index.html">
+            <img src="images/logo.png" alt="Standard-oil"
+          /></a>
           <p class="lead">
-            East African software developers' symposium.All
-            rights reserved.
-          </p> 
+            East African software developers' symposium.All rights reserved.
+          </p>
         </div>
       </footer>
     </main>
