--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
         <nav class="navbar navbar-expand-lg navbar-light bg-white btm-nav">
           <div class="container-fluid" id="mobile-view">
-            <a class="navbar-brand" href="#"><img id="logo" src="./images/logo.png" alt=""></a>
+            <a class="navbar-brand" href="#about.html"><img id="logo" src="./images/logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" aria-controls="navbarNav" id="burger">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -43,9 +43,9 @@
               <div class="ms-auto"></div>
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link active" href="program">Program</a></li>
-                <li class="nav-item"><a class="nav-link active" href="speakers">Speakers</a></li>
-                <li class="nav-item"><a class="nav-link active" href="partners">Sponsors</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#program">Program</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#speakers">Speakers</a></li>
+                <li class="nav-item"><a class="nav-link active" href="#partners">Sponsors</a></li>
                 <li class="nav-item border border-3 border-danger"><a class="nav-link" href="#">CB Campain</a></li>
               </ul>
             </div>
@@ -162,7 +162,7 @@
           </div>
         </section>
       </main>
-      <footer class="container-fluid">
+      <footer class="container-fluid"id="partners">
         <div id="hidden">
           <div class=" d-grid gap-2 col-8 mx-auto mt-3 p-3">
             <h3 class="lead">Partners</h3>
